--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 
 h1 {
     text-align: center;
-    text-decoration: underline;
+    /*text-decoration: underline;*/
     font-size: 16pt;
 }
 
